nginx/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeployment  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydeployment
  template:
    metadata:
      labels:
        app: mydeployment
    spec:
      containers:
      - name: mydeployment
        image: acrmsalasa.azurecr.io/helmapp:0.02
        ports:
        - containerPort: 6969
        volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
