nginx/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mojservis  
spec:
  type: NodePort
  ports:
  - port: 6969
  selector:
    app: mydeployment
